deploy: fc6704a2dbe89d95541de187ff0e8051f3b19ffb

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Build instructions</h1>
 </div><!-- fragment --><h1><a class="anchor" id="autotoc_md2"></a>
 Getting started</h1>
 <p >To use the <code>SerialPort</code> in your own project, add the folder <code>SerialPort/include</code> to your include directories and link against <code>SerialPort/lib/Release/SerialPort.lib</code> on Windows or <code>SerialPort/lib/Release/libSerialPort.a</code> on Linux.</p>
-<p >The class interface is currently undocumented but hopefully self-explanatory. Here is a minimal example to get you started:</p>
+<p >Here is a minimal example to get you started:</p>
 <div class="fragment"><div class="line"><span class="preprocessor">#include &lt;chrono&gt;</span></div>
 <div class="line"><span class="preprocessor">#include &lt;iostream&gt;</span></div>
 <div class="line"><span class="preprocessor">#include &lt;thread&gt;</span></div>
@@ -125,7 +125,8 @@ Getting started</h1>
 <div class="line">    </div>
 <div class="line">  <span class="keywordflow">return</span> 0;</div>
 <div class="line">} <span class="comment">// Ports are closed automatically in their destructor</span></div>
-</div><!-- fragment --> </div></div><!-- PageDoc -->
+</div><!-- fragment --><p >For more details, check out the <a href="https://nullpunkttud.github.io/SerialPort/">documentation</a>. </p>
+</div></div><!-- PageDoc -->
 </div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
