--- a/classserial__port_1_1_interface.html
+++ b/classserial__port_1_1_interface.html
@@ -85,7 +85,7 @@ Collaboration diagram for serial_port::Interface:</div>
 <div class="center"><img src="classserial__port_1_1_interface__coll__graph.png" border="0" usemap="#aserial__port_1_1_interface_coll__map" alt="Collaboration graph"/></div>
 <map name="aserial__port_1_1_interface_coll__map" id="aserial__port_1_1_interface_coll__map">
 <area shape="rect" title="An abstract base class defining the interface of all serial port implementations." alt="" coords="5,95,144,121"/>
-<area shape="rect" href="structserial__port_1_1_settings.html" title=" " alt="" coords="7,5,143,32"/>
+<area shape="rect" href="structserial__port_1_1_settings.html" title="Describes the settings of a port." alt="" coords="7,5,143,32"/>
 </map>
 <center><span class="legend">[<a href="graph_legend.html">legend</a>]</span></center></div>
 <table class="memberdecls">
