--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ $(function() {
 </div><!--header-->
 <div class="contents">
 <div class="textblock"><p ><a class="anchor" id="md_README"></a>A light-weight C++ library for cross-platform serial communication.</p>
+<p ><img src="https://github.com/github/docs/actions/workflows/cmake_linux.yml/badge.svg" alt="CMake Linux" style="pointer-events: none;" class="inline"/></p>
 <h1><a class="anchor" id="autotoc_md1"></a>
 Build instructions</h1>
 <p >The build instructions are the same for both Windows (tested on Windows 10) and Linux (tested on Ubuntu 20.04):</p>
